# autoortho4xplane

./: .gitignore  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ReleaseSharedWorkflow2.yml  build_release.yml
autoortho/: __main__.py  aoconfig.py  config_ui.py  downloader.py  getortho.py  test_getortho.py
unstable/: 404.html  index.html
unstable/config/: index.html
unstable/details/: index.html
unstable/faq/: index.html
unstable/info/: index.html
unstable/scenery/: index.html
