[tool.poetry]
name = "autoortho4xplane"
version = "0.7.3"
description = "AutoOrtho project for X-plane, the project is a fork ."
authors = []
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.12"
eventlet = "^0.37.0"
flask = "3.0.3"
flask-socketio = "^5.3.7"
geocoder = "^1.38.1"
packaging = "^24.1"
psutil = "^6.0.0"
pysimplegui = "<5.0"
pytest = "8.3.3"
refuse = "0.0.4"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "7.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

